--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -52,6 +52,10 @@
     width: 5rem;
     height: 5rem;
 }
+.nav-icon-busqueda{
+    height: 1rem;
+    width: 1rem;
+}
 
 ul{
     list-style: none;
