--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -10,7 +10,6 @@
     width: 100%;
     height: 100%;
     background-color:#0000009d;
-
 }
 
 /* ESTILOS HEADER */
@@ -70,9 +69,7 @@ ul{
 
 .index-parrafoheader, .index-h1 {
     color: #ffffff;
-
 }
-
 
 .parrafo-mujer{
     color: gray;
@@ -121,28 +118,32 @@ ul{
     font-weight: 600;
     text-transform: uppercase;
     margin-top: 0.6rem;
-
-
 }
 
 /* ESTILOS FOOTER */
 footer{
-    background-color: #ffffff;
-    height: 20vh;
-    padding: 48px;
-}
-.linea-index-footer{
-    margin: 0 0 60px;
-    height: 1px;
-    background-color: #808080;
+    background-color: #F4F4F4;
+    width:100%;
 }
 
-.falso-index-footer{
-    display: flex;
-    gap: 12px;
+.footer-conteiner-grid {
+display: grid;
+grid-template-columns: 1fr;
+grid-template-rows: repeat(4, 1fr);
+grid-column-gap: 0;
+grid-row-gap: 1vh;
 }
-.columna-index-footer{
-    width:100%;
+
+.div1 { 
+    grid-area: 1 / 1 / 2 / 2; 
+}
+.div2 { grid-area: 2 / 1 / 3 / 2; }
+.div3 { grid-area: 3 / 1 / 4 / 2; }
+.div4 { grid-area: 4 / 1 / 5 / 2; }
+
+.footer-ul img{
+    height: 40px;
+    width: 40px;    
 }
 
 @media only screen and (min-width: 720px){
