--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -33,8 +33,8 @@
     flex-direction: column;
     justify-content: center;
     height: 50vh;
-    max width: 63vh;
-    padding: 3rem;
+    max width:63vh;
+    padding:3rem;
     gap: 1rem;
 } 
 
@@ -88,7 +88,6 @@ ul{
 }
 
 .ultimos-oversize-contenedor {
-    display: flex; 
     flex-wrap:wrap;
     gap: 1rem;
     justify-content: center;
@@ -100,14 +99,14 @@ ul{
 }
 .remeraindex{
     transition: transform 0.5s;
-    width: 25rem;
     background-color: #e68888b9;
     border-radius: 0.5rem;
 }
  
-.remeraindex img{
-    width: 100%;
+.remeraindex img {
+    width: 50%;
 }
+
 .btn-remera-index{
     border-radius: 0.5rem;
     width: 100%;
@@ -124,10 +123,12 @@ ul{
 footer{
     background-color: #F4F4F4;
     width:100%;
+    
 }
 
 .footer-conteiner-grid {
 display: grid;
+
 grid-template-columns: 1fr;
 grid-template-rows: repeat(4, 1fr);
 grid-column-gap: 0;
@@ -144,6 +145,12 @@ grid-row-gap: 1vh;
 .footer-ul img{
     height: 40px;
     width: 40px;    
+}
+.p-footer-derechos{
+    color: #ffffff;
+    text-align: center;
+    width: 100%;;
+    background-color: #000000;
 }
 
 @media only screen and (min-width: 720px){
