--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -8,16 +8,14 @@
 .oscureser-fondo{
     position: absolute;
     width: 100%;
-    height: 100%;
     background-color:#0000009d;
 }
 
 /* ESTILOS HEADER */
-.index-header{
-    background-image: url(../img/fondoindex.jpeg);
+.index-header, .hombres-header {
     background-size: cover;
     background-repeat: no-repeat;
-    height: 95vh;
+    height: 8vh;
     position: relative;
 }
 
@@ -84,6 +82,12 @@ ul{
     margin-bottom: 1rem;
 }
 
+.carrusel-foto-index{
+    width: 100%;
+    height: 90vh;
+    object-fit: cover;
+}
+
 .btn-remera-index{
     border-radius: 0.5rem;
     background-color: #ff0000;
@@ -132,8 +136,10 @@ grid-row-gap: 1vh;
     background-color: #000000;
 }
 
-/* @media only screen and (min-width: 720px){
-    ul,.index-header-flex{
-        flex-direction: row;
-    }
-} */
+@media only screen and (min-width: 720px){
+   .carrusel-foto-index{
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+   }
+}
