--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -5,18 +5,13 @@
     box-sizing: border-box;
 }
 
-.oscureser-fondo{
-    position: absolute;
-    width: 100%;
-    background-color:#0000009d;
-}
+
 
 /* ESTILOS HEADER */
 .index-header, .hombres-header {
     background-size: cover;
     background-repeat: no-repeat;
     height: 8vh;
-    position: relative;
 }
 
 .index-header-flex{
@@ -24,6 +19,12 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+}
+
+.carrusel-foto-index-main{
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
 }
 
 .contenedor-inferior-header{
@@ -36,14 +37,6 @@
     gap: 1rem;
 } 
 
-.btn-header{
-    background-color: #ffffff;
-    border: none;
-    color: #8f4e4e;
-    font-weight: 600;
-    padding: 15px ;
-    margin-top: 2rem;
-}
 
 .logotipo-index{
     width: 5rem;
@@ -80,6 +73,9 @@ ul{
 .nuestrasremeras-index-h2{
     text-align: center;
     margin-bottom: 1rem;
+    font-size: 2rem;
+    font-weight: 600;
+    margin: 2rem 0;
 }
 
 .carrusel-foto-index{
@@ -88,43 +84,15 @@ ul{
     object-fit: cover;
 }
 
-.btn-remera-index{
-    border-radius: 0.5rem;
-    background-color: #ff0000;
-    border: none;
-    padding: 0.5rem ;
-    color: #ffffff;
-    font-weight: 600;
-    text-transform: uppercase;
-    margin-top: 0.6rem;
-}
-
 
 
 
 /* ESTILOS FOOTER */
 footer{
     background-color: #F4F4F4;
-    width:100%;
+    width:100%;}
+
     
-}
-
-.footer-conteiner-grid {
-display: grid;
-
-grid-template-columns: 1fr;
-grid-template-rows: repeat(4, 1fr);
-grid-column-gap: 0;
-grid-row-gap: 1vh;
-}
-
-.div1 { 
-    grid-area: 1 / 1 / 2 / 2; 
-}
-.div2 { grid-area: 2 / 1 / 3 / 2; }
-.div3 { grid-area: 3 / 1 / 4 / 2; }
-.div4 { grid-area: 4 / 1 / 5 / 2; }
-
 .footer-ul img{
     height: 40px;
     width: 40px;    
@@ -136,10 +104,17 @@ grid-row-gap: 1vh;
     background-color: #000000;
 }
 
+
 @media only screen and (min-width: 720px){
-   .carrusel-foto-index{
+   
+    .carrusel-foto-index{
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     object-fit: cover;
    }
+
+.index-header{
+    height: 4vh;
+    position: relative;
+}
 }
