--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,42 @@
-@media only screen and (min-width: 720px) {
+@media only screen and (min-width: 0px) and (max-width: 420px) {
+  .video-background {
+    width: 100%;
+    height: 90vh;
+  }
+  .video {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+  }
+  .footer-index {
+    background-color: rgb(0, 227, 0);
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 421px) and (max-width: 768px) {
   .carrusel-foto-index {
     width: 100%;
     height: 60vh;
     object-fit: cover;
   }
-  .index-header {
-    height: 4vh;
-    position: relative;
+  .footer-index {
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 769px) {
+  .carrusel-foto-index {
+    width: 100%;
+    height: 100vh;
+  }
+  .footer-index {
+    background-color: rgb(255, 0, 0);
+    width: 100%;
+  }
+  .carousel-item {
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
   }
 }
 .flexpages, ul, .contenedor-inferior-header, .index-header-flex {
@@ -16,7 +46,8 @@
 }
 
 /* ESTILOS HEADER */
-.index-header, .hombres-header {
+.index-header,
+.hombres-header {
   background-size: cover;
   background-repeat: no-repeat;
   height: auto;
@@ -31,6 +62,7 @@
   width: 100%;
   height: 50vh;
   object-fit: cover;
+  margin: 0 auto;
 }
 
 .contenedor-inferior-header {
@@ -60,7 +92,8 @@ ul {
   color: #FFFFFF;
 }
 
-.index-parrafoheader, .index-h1 {
+.index-parrafoheader,
+.index-h1 {
   color: #FFFFFF;
 }
 
@@ -79,9 +112,43 @@ ul {
   margin: 2rem 0;
 }
 
+.contenido h1 {
+  text-align: center;
+  font-size: 2rem;
+  color: rgba(0, 0, 0, 0.7921568627);
+}
+
+.carousel-index {
+  position: relative;
+  z-index: 2;
+  margin-top: 100vh;
+}
+
 .carrusel-foto-index {
   width: 100%;
-  height: 90vh;
+  height: auto;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+.video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.contenido {
+  position: relative;
+  z-index: 10;
+  color: white;
+}
+
+.video-index {
+  width: 100vw;
+  height: 100vh;
   object-fit: cover;
 }
 
@@ -108,6 +175,7 @@ footer {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
