--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,58 +1,62 @@
 /* ESTILOS HEADER */
-.index-header, .hombres-header {
+.index-header,
+.hombres-header {
     background-size: cover;
     background-repeat: no-repeat;
     height: auto;
 }
 
-.index-header-flex{
+.index-header-flex {
     @extend .flexpages;
     justify-content: space-between;
     flex-direction: column;
 }
 
-.carrusel-foto-index-main{
+.carrusel-foto-index-main {
     width: 100%;
     height: 50vh;
     object-fit: cover;
+    margin: 0 auto;
 }
 
-.contenedor-inferior-header{
-     @extend .flexpages;
+.contenedor-inferior-header {
+    @extend .flexpages;
 
     flex-direction: column;
     height: 50vh;
     padding: 3rem;
-    gap:1rem; 
-} 
+    gap: 1rem;
+}
 
 
-.logotipo-index{
+.logotipo-index {
     width: 5rem;
     height: 5rem;
 }
-.nav-icon-busqueda{
+
+.nav-icon-busqueda {
     height: 1rem;
     width: 1rem;
 }
 
-ul{
+ul {
     list-style: none;
     @extend .flexpages;
     flex-direction: column;
     gap: 1rem;
 }
-.navegacion-superior-index ul li a{
+
+.navegacion-superior-index ul li a {
     color: $backgroundcolor;
 }
 
-.index-parrafoheader, .index-h1 {
+.index-parrafoheader,
+.index-h1 {
     color: $backgroundcolor;
 }
 
-.parrafo-mujer{
+.parrafo-mujer {
     color: gray;
     font-style: italic;
     font-size: 1.5em;
 }
-
