--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,15 +1,46 @@
 /* ESTILOS MAIN */
-
-.nuestrasremeras-index-h2{
+.nuestrasremeras-index-h2 {
     text-align: center;
     margin-bottom: 1rem;
     font-size: 2rem;
     font-weight: 600;
     margin: 2rem 0;
 }
+.contenido h1{
+    text-align: center;
+    font-size: 2rem;
+     color: #000000ca;
+}
+.carousel-index{
+ position: relative;
+  z-index: 2;
+    margin-top: 100vh;
+}
 
-.carrusel-foto-index{
-    width: 100%;
-    height: 90vh;
+.carrusel-foto-index {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+.video-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.contenido {
+    position: relative;
+    z-index: 10;
+    color: white;
+}
+
+.video-index {
+    width: 100vw;
+    height: 100vh;
     object-fit: cover;
 }
