--- a/sass/mq/_mq.scss
+++ b/sass/mq/_mq.scss
@@ -1,13 +1,52 @@
-@media only screen and (min-width: 720px){
-   
-    .carrusel-foto-index{
+@media only screen and (min-width: 0px) and (max-width: 420px){
+    .video-background{
+        width: 100%;
+        height: 90vh;
+    }
+    .video{
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+    }
+
+
+   .footer-index{
+    background-color: rgb(0, 227, 0);
+    width: 100%;
+   }
+}
+
+@media only screen and (min-width: 421px) and (max-width: 768px){
+      .carrusel-foto-index{
     width: 100%;
     height: 60vh;
     object-fit: cover;
    }
 
-.index-header{
-    height: 4vh;
-    position: relative;
+   .footer-index{
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+   }
 }
+
+
+@media only screen and (min-width: 769px){
+      .carrusel-foto-index{
+    width: 100%;
+    height: 100vh;
+   }
+
+   .footer-index{
+    background-color: rgb(255, 0, 0);
+    width: 100%;
+    
+   }
+   .carousel-item{
+    width: 100%;
+    height: 60vh;
+    object-fit: cover
+   }
 }
+
+
+
