--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,28 @@
-@media only screen and (min-width: 0px) and (max-width: 420px) {
-  .video-background {
-    width: 100%;
-    height: 90vh;
-  }
-  .video {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-  }
-  .footer-index {
-    background-color: rgb(0, 227, 0);
-    width: 100%;
-  }
-}
-@media only screen and (min-width: 421px) and (max-width: 768px) {
-  .carrusel-foto-index {
-    width: 100%;
-    height: 60vh;
-    object-fit: cover;
-  }
-  .footer-index {
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-  }
-}
-@media only screen and (min-width: 769px) {
-  .carrusel-foto-index {
-    width: 100%;
-    height: 100vh;
-  }
-  .footer-index {
-    background-color: rgb(255, 0, 0);
-    width: 100%;
-  }
-  .carousel-item {
-    width: 100%;
-    height: 60vh;
-    object-fit: cover;
-  }
-}
 .flexpages, ul, .contenedor-inferior-header, .index-header-flex {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 /* ESTILOS HEADER */
 .index-header,
-.hombres-header {
+.hombres-header, .mujer-header {
   background-size: cover;
   background-repeat: no-repeat;
-  height: auto;
 }
 
 .index-header-flex {
-  justify-content: space-between;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+.navbar {
+  height: auto;
+  background-color: #E7E9E7;
 }
 
 .carrusel-foto-index-main {
   width: 100%;
-  height: 50vh;
+  height: auto;
   object-fit: cover;
   margin: 0 auto;
 }
@@ -89,12 +51,12 @@ ul {
 }
 
 .navegacion-superior-index ul li a {
-  color: #FFFFFF;
+  color: #E7E9E7;
 }
 
 .index-parrafoheader,
 .index-h1 {
-  color: #FFFFFF;
+  color: #E7E9E7;
 }
 
 .parrafo-mujer {
@@ -118,26 +80,32 @@ ul {
   color: rgba(0, 0, 0, 0.7921568627);
 }
 
-.carousel-index {
-  position: relative;
-  z-index: 2;
-  margin-top: 100vh;
-}
-
-.carrusel-foto-index {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  margin: 0 auto;
-}
-
-.video-background {
-  position: absolute;
-  top: 0;
-  left: 0;
+.carrusel-img-index {
   width: 100vw;
+  height: 500px;
+  object-fit: cover;
   overflow: hidden;
-  z-index: -1;
+  position: relative;
+}
+
+.carrusel-foto-index-main {
+  width: 100vw;
+  object-fit: contain;
+  overflow: hidden;
+}
+
+.div-index-main {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 2rem;
+}
+
+.card-img-index {
+  object-fit: cover;
+  height: 25%;
+  width: auto;
+  overflow: hidden;
 }
 
 .contenido {
@@ -146,30 +114,111 @@ ul {
   color: white;
 }
 
-.video-index {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-}
-
 /* ESTILOS FOOTER */
 footer {
-  background-color: #FFFFFF;
+  background-color: #E7E9E7;
   width: 100%;
 }
 
 .footer-ul img {
   height: 40px;
   width: 40px;
+  margin: 0 0.5rem;
 }
 
 .p-footer-derechos {
-  color: #FFFFFF;
+  color: #E7E9E7;
   text-align: center;
   width: 100%;
   background-color: #000000;
 }
 
+@media only screen and (min-width: 0px) and (max-width: 425px) {
+  .div-index-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+  .card-img-index {
+    object-fit: cover;
+    height: 200px;
+    width: 200px;
+    overflow: hidden;
+  }
+  .footer-index {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  .carrusel-foto-index {
+    width: 100%;
+    object-fit: cover;
+  }
+  .div-index-main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    width: 100%;
+    height: 100%;
+  }
+  .card-img-index {
+    object-fit: cover;
+    overflow: hidden;
+    width: 200px;
+    height: 200px;
+  }
+  .footer-index {
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 769px) {
+  .carousel-index {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    margin: 0;
+  }
+  .carousel-item {
+    width: 100%;
+    object-fit: cover;
+  }
+  .carrusel-img-index {
+    height: 100vh;
+    object-fit: cover;
+  }
+  .div-index-main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    width: 100%;
+    height: 50vh;
+  }
+  .card-index-div {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-img-index {
+    object-fit: cover;
+    overflow: hidden;
+    width: 100%;
+    height: 300px;
+  }
+  .footer-index {
+    width: 100%;
+  }
+}
 /* ESTILOS GENERALES */
 * {
   margin: 0;
