--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,14 +5,17 @@ footer{
     background-color:$backgroundcolor;
     width:100%;}
 
-    
 .footer-ul img{
     height: 40px;
-    width: 40px;    
-}
+    width: 40px;
+    margin: 0 0.5rem;
+ }
+
 .p-footer-derechos{
     color: $backgroundcolor;
     text-align: center;
     width: 100%;;
     background-color: #000000;
 }
+
+
