--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,27 +1,31 @@
 /* ESTILOS HEADER */
 .index-header,
-.hombres-header {
+.hombres-header,.mujer-header {
     background-size: cover;
     background-repeat: no-repeat;
-    height: auto;
+    
 }
 
-.index-header-flex {
+.index-header-flex, {
     @extend .flexpages;
-    justify-content: space-between;
     flex-direction: column;
+    justify-content: space-between;
 }
 
+.navbar{
+    height:auto;
+    background-color:$backgroundcolor ;
+    
+}
 .carrusel-foto-index-main {
     width: 100%;
-    height: 50vh;
+    height:auto;
     object-fit: cover;
     margin: 0 auto;
 }
 
 .contenedor-inferior-header {
     @extend .flexpages;
-
     flex-direction: column;
     height: 50vh;
     padding: 3rem;
