--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -6,32 +6,47 @@
     font-weight: 600;
     margin: 2rem 0;
 }
-.contenido h1{
+
+.contenido h1 {
     text-align: center;
     font-size: 2rem;
-     color: #000000ca;
-}
-.carousel-index{
- position: relative;
-  z-index: 2;
-    margin-top: 100vh;
+    color: #000000ca;
 }
 
-.carrusel-foto-index {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  margin: 0 auto;
-}
 
-.video-background {
-    position: absolute;
-    top: 0;
-    left: 0;
+.carrusel-img-index {
     width: 100vw;
-    overflow: hidden;
-    z-index: -1;
+    height: 500px;
+    object-fit: cover;
+    overflow:hidden;
+    position: relative;
 }
+
+.carousel-index{
+}
+.carrusel-foto-index-main{
+    width: 100vw;
+    object-fit: contain;
+     overflow:hidden;
+}
+
+
+.div-index-main{
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 2rem;
+}
+
+ .card-img-index{
+    object-fit: cover;
+    height: 25%;
+    width: auto;
+    overflow: hidden;
+    
+ }
+
+
 
 .contenido {
     position: relative;
@@ -39,8 +54,3 @@
     color: white;
 }
 
-.video-index {
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-}
