--- a/sass/mq/_mq.scss
+++ b/sass/mq/_mq.scss
@@ -1,52 +1,113 @@
-@media only screen and (min-width: 0px) and (max-width: 420px){
-    .video-background{
-        width: 100%;
-        height: 90vh;
-    }
-    .video{
-        width: 100%;
-        height: 100vh;
-        object-fit: cover;
-    }
-
-
-   .footer-index{
-    background-color: rgb(0, 227, 0);
-    width: 100%;
+@media only screen and (min-width: 0px) and (max-width: 425px) {
+   
+   .div-index-main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 0.5rem;
    }
+   
+   .card-img-index {
+      object-fit: cover;
+      height: 200px;
+      width: 200px;
+      overflow: hidden;
+      
+   }
+   
+   .footer-index {
+      width: 100%;
+   }
+
 }
 
-@media only screen and (min-width: 421px) and (max-width: 768px){
-      .carrusel-foto-index{
-    width: 100%;
-    height: 60vh;
-    object-fit: cover;
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+   .carrusel-foto-index {
+      width: 100%;
+      object-fit: cover;
    }
 
-   .footer-index{
-    background-color: rgb(255, 255, 255);
-    width: 100%;
+   .div-index-main {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5rem;
+      width: 100%;
+      height: 100%;
    }
+
+   .card-img-index {
+      object-fit: cover;
+      overflow: hidden;
+      width: 200px;
+      height: 200px;
+
+   }
+
+
+
+   .footer-index {
+      background-color: rgb(255, 255, 255);
+      width: 100%;
+   }
+
+
 }
 
 
-@media only screen and (min-width: 769px){
-      .carrusel-foto-index{
-    width: 100%;
-    height: 100vh;
+@media only screen and (min-width: 769px) {
+   .carousel-index {
+      width: 100vw;
+      height: 100vh;
+      position: relative;
+      margin: 0;
+
    }
 
-   .footer-index{
-    background-color: rgb(255, 0, 0);
-    width: 100%;
-    
+   .carousel-item {
+      width: 100%;
+      object-fit: cover;
    }
-   .carousel-item{
-    width: 100%;
-    height: 60vh;
-    object-fit: cover
+
+   .carrusel-img-index {
+      height: 100vh;
+      object-fit: cover;
    }
+
+
+.div-index-main {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5rem;
+      width: 100%;
+      height:  50vh;
+   }
+.card-index-div{
+   width: 25%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 }
 
+   .card-img-index {
+      object-fit: cover;
+      overflow: hidden;
+      width: 100%;
+      height: 300px ;
+
+   }
 
 
+
+
+   .footer-index {
+      width: 100%;
+   }
+}
