--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 
 /* ESTILOS HEADER */
 .index-header,
-.hombres-header, .mujer-header {
+.hombres-header,
+.mujer-header {
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -16,8 +17,11 @@
 }
 
 .navbar {
-  height: auto;
-  background-color: #E7E9E7;
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  z-index: 1000;
+  top: 0;
 }
 
 .carrusel-foto-index-main {
@@ -88,24 +92,31 @@ ul {
   position: relative;
 }
 
+.img-desktop {
+  display: none;
+}
+
 .carrusel-foto-index-main {
   width: 100vw;
-  object-fit: contain;
+  object-fit: cover;
   overflow: hidden;
+  height: 100%;
 }
 
 .div-index-main {
   display: flex;
   align-items: center;
-  flex-wrap: nowrap;
-  gap: 2rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0;
 }
 
 .card-img-index {
   object-fit: cover;
-  height: 25%;
-  width: auto;
-  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .contenido {
@@ -179,10 +190,13 @@ footer {
 }
 @media only screen and (min-width: 769px) {
   .carousel-index {
+    display: none;
+  }
+  .img-desktop {
+    display: block;
+    object-fit: cover;
     width: 100vw;
-    height: 100vh;
-    position: relative;
-    margin: 0;
+    height: 100%;
   }
   .carousel-item {
     width: 100%;
@@ -198,22 +212,25 @@ footer {
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
+    height: auto;
     gap: 0.5rem;
-    width: 100%;
-    height: 50vh;
   }
   .card-index-div {
-    width: 25%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 25%;
+    height: auto;
   }
   .card-img-index {
     object-fit: cover;
-    overflow: hidden;
+    height: 500px;
     width: 100%;
-    height: 300px;
+    flex-shrink: 0;
+  }
+  .carrusel-foto-index-main {
+    height: 95vh;
   }
   .footer-index {
     width: 100%;
