--- a/sass/mq/_mq.scss
+++ b/sass/mq/_mq.scss
@@ -59,13 +59,19 @@
 
 
 @media only screen and (min-width: 769px) {
-   .carousel-index {
-      width: 100vw;
-      height: 100vh;
-      position: relative;
-      margin: 0;
 
-   }
+   .carousel-index{
+    display:none ;
+}
+
+
+.img-desktop{
+    display: block;
+    object-fit: cover;
+    width: 100vw;
+   height: 100%;
+}
+
 
    .carousel-item {
       width: 100%;
@@ -84,26 +90,31 @@
       flex-wrap: nowrap;
       justify-content: center;
       align-items: center;
+      height: auto;
       gap: 0.5rem;
-      width: 100%;
-      height:  50vh;
+
    }
+
 .card-index-div{
-   width: 25%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   width: 25%;
+   height: auto;
+   
 }
 
    .card-img-index {
       object-fit: cover;
-      overflow: hidden;
+      height: 500px ;
       width: 100%;
-      height: 300px ;
+      flex-shrink: 0;
 
    }
-
+.carrusel-foto-index-main{
+   height: 95vh;
+}
 
 
 
