--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,9 +10,10 @@
 @import "layout/footer";
 
 // 3. Pages
-@import "pages/home";
 @import "pages/men";     
 @import "pages/woman";
+@import "pages/accesorios";
+@import "pages/sobrenosotros";
 
 @import "mq/mq";
 
