--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ ul {
 }
 
 /* ESTILOS MAIN */
-.nuestrasremeras-index-h2 {
+.nuestrasremeras-men-h2 {
   text-align: center;
   margin-bottom: 1rem;
   font-size: 2rem;
@@ -108,16 +108,11 @@ ul {
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 0;
-  height: autoi;
 }
 
 .card-img-index {
-  object-fit: cover;
   height: 100%;
   width: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 .contenido {
@@ -128,36 +123,60 @@ ul {
 
 /* ESTILOS FOOTER */
 footer {
-  background-color: #E7E9E7;
+  background-color: #FFFFFF;
   width: 100%;
+}
+
+.footer-ul {
+  width: 100%;
+  object-fit: cover;
 }
 
 .footer-ul img {
   height: 40px;
   width: 40px;
-  margin: 0 0.5rem;
+  object-fit: cover;
 }
 
 .p-footer-derechos {
   color: #E7E9E7;
   text-align: center;
-  width: 100%;
+  max-width: 100%;
   background-color: #000000;
 }
 
 @media only screen and (min-width: 0px) and (max-width: 425px) {
+  .carrusel-foto-index {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .carrusel-img-index {
+    width: 100vw;
+    height: 500px;
+    object-fit: cover;
+    overflow: hidden;
+    position: relative;
+  }
+  .img-desktop {
+    display: none;
+  }
   .div-index-main {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 0.5rem;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+  }
+  .card-index-div {
+    max-width: 50%;
+    height: 100%;
   }
   .card-img-index {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    height: 200px;
-    width: 200px;
-    overflow: hidden;
   }
   .footer-index {
     width: 100%;
@@ -174,6 +193,7 @@ footer {
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
+    text-align: center;
     gap: 0.5rem;
     width: 100%;
     height: 100%;
@@ -185,7 +205,6 @@ footer {
     height: 200px;
   }
   .footer-index {
-    background-color: rgb(255, 255, 255);
     width: 100%;
   }
 }
