--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,5 +1,5 @@
 /* ESTILOS MAIN */
-.nuestrasremeras-index-h2 {
+.nuestrasremeras-men-h2 {
     text-align: center;
     margin-bottom: 1rem;
     font-size: 2rem;
@@ -41,17 +41,11 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
-    gap:0;
-    height: autoi;
-
 }
 
  .card-img-index{
-    object-fit: cover;
     height: 100%;
     width: 100%;
-    margin: 0;
-    padding: 0;
     
  }
 
