--- a/sass/mq/_mq.scss
+++ b/sass/mq/_mq.scss
@@ -1,18 +1,45 @@
 @media only screen and (min-width: 0px) and (max-width: 425px) {
    
-   .div-index-main {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 0.5rem;
+   .carrusel-foto-index {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
    }
    
-   .card-img-index {
+   .carrusel-img-index {
+      width: 100vw;
+      height: 500px;
       object-fit: cover;
-      height: 200px;
-      width: 200px;
       overflow: hidden;
+      position: relative;
+   }
+   
+   .img-desktop {
+      display: none;
+   }
+
+   .div-index-main{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+    
+   }
+   
+   .card-index-div {
+      max-width: 50%;
+      height: 100%;
+      
+
+
+}
+   .card-img-index {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      
       
    }
    
@@ -34,6 +61,7 @@
       flex-wrap: nowrap;
       justify-content: center;
       align-items: center;
+      text-align: center;
       gap: 0.5rem;
       width: 100%;
       height: 100%;
@@ -50,7 +78,6 @@
 
 
    .footer-index {
-      background-color: rgb(255, 255, 255);
       width: 100%;
    }
 
