--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,14 @@
-.flexpages, ul, .contenedor-inferior-header, .index-header-flex {
+.flexpages, ul, .contenedor-inferior-header {
   display: flex;
   align-items: center;
 }
 
 /* ESTILOS HEADER */
 .index-header,
-.hombres-header,
+.hombre-header,
 .mujer-header {
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-.index-header-flex {
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 .navbar {
@@ -69,15 +64,7 @@ ul {
   font-size: 1.5em;
 }
 
-/* ESTILOS MAIN */
-.nuestrasremeras-men-h2 {
-  text-align: center;
-  margin-bottom: 1rem;
-  font-size: 2rem;
-  font-weight: 600;
-  margin: 2rem 0;
-}
-
+/* MAIN INDEX */
 .contenido h1 {
   text-align: center;
   font-size: 2rem;
@@ -119,6 +106,41 @@ ul {
   position: relative;
   z-index: 10;
   color: white;
+}
+
+.nuestrasremeras-men-h2 {
+  text-align: center;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  font-weight: 1300;
+  margin: 2rem 0;
+}
+
+.contenedor-men {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+
+.img-card {
+  flex: 0 0 50%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.card-info {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  padding: 10px;
 }
 
 /* ESTILOS FOOTER */
@@ -178,6 +200,14 @@ footer {
     height: 100%;
     object-fit: cover;
   }
+  .contenedor-men {
+    flex: 1 1 50%;
+  }
+  .img-card {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
   .footer-index {
     width: 100%;
   }
@@ -203,6 +233,17 @@ footer {
     overflow: hidden;
     width: 200px;
     height: 200px;
+  }
+  .contenedor-cards-men {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .img-card {
+    flex: 0 0 25%;
   }
   .footer-index {
     width: 100%;
@@ -252,6 +293,9 @@ footer {
   .carrusel-foto-index-main {
     height: 95vh;
   }
+  .img-card {
+    flex: 0 0 25%;
+  }
   .footer-index {
     width: 100%;
   }
@@ -260,8 +304,7 @@ footer {
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  overflow-x: hidden;
+  box-sizing: border-boxx;
 }
 
 /*# sourceMappingURL=style.css.map */
