--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,21 +8,13 @@
 @import "layout/header";
 @import "layout/main";
 @import "layout/footer";
-
-// 3. Pages
-@import "pages/men";     
-@import "pages/woman";
-@import "pages/accesorios";
-@import "pages/sobrenosotros";
-
 @import "mq/mq";
 
 /* ESTILOS GENERALES */
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden;
+    box-sizing: border-boxx;
 }
 
 
