--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,9 @@ ul {
 
 .div-index-main {
   display: flex;
-  align-items: center;
+  align-content: flex-start;
   flex-wrap: wrap;
-  justify-content: center;
+  object-fit: cover;
 }
 
 .card-img-index {
@@ -184,22 +184,9 @@ footer {
   .img-desktop {
     display: none;
   }
-  .div-index-main {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
-  }
   .card-index-div {
     max-width: 50%;
     height: 100%;
-  }
-  .card-img-index {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
   .contenedor-men {
     flex: 1 1 50%;
@@ -278,12 +265,8 @@ footer {
     gap: 0.5rem;
   }
   .card-index-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 25%;
-    height: auto;
+    flex-basis: 100px;
+    flex-grow: 1;
   }
   .card-img-index {
     object-fit: cover;
