--- a/sass/mq/_mq.scss
+++ b/sass/mq/_mq.scss
@@ -19,15 +19,6 @@
       display: none;
    }
 
-   .div-index-main {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      justify-content: center;
-      text-align: center;
-      height: 100%;
-
-   }
 
    .card-index-div {
       max-width: 50%;
@@ -37,13 +28,7 @@
 
    }
 
-   .card-img-index {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-
-
-   }
+   
 .contenedor-men {
   flex: 1 1 50%; // 2 por fila en mobile
 }
@@ -149,13 +134,8 @@
    }
 
    .card-index-div {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 25%;
-      height: auto;
-
+      flex-basis: 100px;
+      flex-grow: 1;
    }
 
    .card-img-index {
