--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -87,3 +87,11 @@ align-content: flex-start;
 }
 
 
+//MAIN MUJER
+.sobrenosotros-main {
+    font-size: 100%;
+    padding: 20px;
+    margin-top: 20px;
+    position: relative;
+    top:20px;
+}
