--- a/css/style.css
+++ b/css/style.css
@@ -92,14 +92,14 @@ ul {
 
 .div-index-main {
   display: flex;
-  align-content: flex-start;
+  align-items: flex-start;
   flex-wrap: wrap;
-  object-fit: cover;
 }
 
 .card-img-index {
-  height: 100%;
+  height: 250px;
   width: 100%;
+  object-fit: cover;
 }
 
 .contenido {
