--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -19,8 +19,6 @@
     display: none;
 }
 
-
-
 .carrusel-foto-index-main{
     width: 100vw;
     object-fit: cover;
@@ -31,14 +29,14 @@
 
 .div-index-main{
     display: flex;
-    align-content: flex-start;
+    align-items: flex-start;
     flex-wrap: wrap;
-    object-fit: cover;
 }
 
  .card-img-index{
-    height: 100%;
+    height: 250px;
     width: 100%;
+     object-fit: cover;
  }
 
 
