--- a/css/style.css
+++ b/css/style.css
@@ -96,10 +96,28 @@ ul {
   flex-wrap: wrap;
 }
 
+.card-index-div {
+  max-width: 100%;
+  height: 100%;
+  align-items: start;
+  flex-flow: wrap;
+}
+
 .card-img-index {
   height: 250px;
   width: 100%;
   object-fit: cover;
+}
+
+.link-remera-index {
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 50%;
 }
 
 .contenido {
@@ -192,10 +210,6 @@ footer {
   .img-desktop {
     display: none;
   }
-  .card-index-div {
-    max-width: 50%;
-    height: 100%;
-  }
   .contenedor-men {
     flex: 1 1 50%;
   }
@@ -228,7 +242,7 @@ footer {
     object-fit: cover;
     overflow: hidden;
     width: 200px;
-    height: 200px;
+    height: 300px;
   }
   .contenedor-cards-men {
     display: flex;
