--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -114,3 +114,9 @@ align-content: flex-start;
 }
 
 
+// MAIN SOBRE NOSOTROS
+.img-sobrenosotros{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
