--- a/sass/mq/_mq.scss
+++ b/sass/mq/_mq.scss
@@ -86,6 +86,14 @@
    }
 
 
+// MAIN SOBRE NOSOTROS
+.img-sobrenosotros{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
 }
 
 
@@ -160,8 +168,8 @@
    
 //MAIN SOBRENOSOTROS
 .img-sobrenosotros{
-   height: 70;
-   width: 100%;
+   height: 100%;
+   width: 400px;
     
 }
 
