--- a/css/style.css
+++ b/css/style.css
@@ -320,8 +320,8 @@ footer {
     width: 100%;
   }
   .img-sobrenosotros {
-    height: 100%;
-    width: 400px;
+    height: 90vh;
+    width: 100%;
   }
 }
 /* ESTILOS GENERALES */
