--- a/sass/mq/_mq.scss
+++ b/sass/mq/_mq.scss
@@ -168,9 +168,8 @@
    
 //MAIN SOBRENOSOTROS
 .img-sobrenosotros{
-   height: 100%;
-   width: 400px;
-    
+   height: 90vh;
+   width: 100%;
 }
 
 }
